# Reports

./: CMakeLists.txt
InterfaceLayer/ReportFront/: ReportManager.cpp  ReportManager.h
InterfaceLayer/TasksFront/: TaskManager.cpp  TaskManager.h
InterfaceLayer/UserFront/: UserManager.cpp  UserManager.h
LogicLayer/: Log.cpp  Log.h
LogicLayer/Report/: BaseReport.cpp  BaseReport.h  DailyReport.cpp  DailyReport.h  SprintsReport.cpp  SprintsReport.h
LogicLayer/Tasks/: Comment.cpp  Comment.h  Task.cpp  Task.h  TasksEnums  TasksSystem.cpp  TasksSystem.h
LogicLayer/Tasks/FindingRules/: BaseRule.h  ByDate.cpp  ByDate.h  ByEditing.cpp  ByEditing.h  ByID.cpp  ByID.h  BySubordinationsOfUser.cpp  BySubordinationsOfUser.h  ByUser.cpp  ByUser.h
LogicLayer/Worker/: BaseWorker.cpp  BaseWorker.h  CompanyWorkers.cpp  CompanyWorkers.h  Worker.cpp  Worker.h
